# Piko

./: .gitignore  README.md  pyproject.toml
.piko/: round_status.json
.piko/round_queue/: CAP-0-R01.md  CAP-0-R02.md  CAP-0-R03.md  CAP-1-R01.md  CAP-1-R02.md  CAP-1-R03.md  CAP-2-R01.md  (+397 more)
apps/: __init__.py
docs/: agent_contracts.md  architecture.md  article_template.md  current_state.md  domain_adapter_contract.md  game_guide_domain.md  growth_loop_operator_guide.md  operations.md  oss_learning_operator_guide.md  player_pain_discovery.md  publishing_policy.md  regression_policy.md  self_improvement_loop.md  self_improvement_operator_guide.md  source_policy.md  stages_and_rounds.md  template_architecture.md  upgrade_policy.md  v02_runtime_growth.md
tests/: test_capability_map.py  test_connector_registry.py  test_content_benchmark.py  test_discovery_search.py  test_domain_plugins.py  test_external_endpoint_pilot.py  test_finish_mvp.py  test_growth_loop.py  test_live_1.py  test_live_connector_pilot.py  test_local_endpoint_success.py  test_operator_demo_flow.py  test_oss_learning.py  test_post_s8_stabilization.py  test_provider_live_pipeline.py  test_real_source_pilot_2.py  test_realdata_pipeline.py  test_rev_batch_3_6.py  test_self_improvement.py  test_skill_runtime.py  test_source_provider.py  test_stage_1.py  test_stage_2.py  test_stage_3.py  test_stage_4.py  test_stage_5.py  test_stage_6.py  test_stage_7.py  test_stage_8.py  test_storytelling_artifacts.py  test_v02_runtime.py  test_v03_practical_plugin.py  test_v04_langgraph_backend.py  test_v05_langgraph_install.py
(+984 files in other folders)
